--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Brandless Markov Tweet Generator</title>
+    <title>Markov Tweet Generator</title>
     <link href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/united/bootstrap.css" rel="stylesheet">
     <style>
       .description {
